--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/jpg" href="">
+        <link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
     </head>
     <body>
 
+        <div>
+            <img id="hdp" src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp">
+        </div>
+        
+        <div></div>
         
         <script src="" async defer></script>
     </body>
