--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
         <link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
     </head>
     <body>
-
+        <img id="hdp" src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp">
         <div>
-            <img id="hdp" src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp">
+            <a href=""></a> <a href=""></a> <a href=""></a> <a href=""></a> 
         </div>
-        
-        <div></div>
-        
         <script src="" async defer></script>
     </body>
 </html>
