testing+add a bunch of pictures

--- a/index.html
+++ b/index.html
@@ -5,16 +5,84 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Mindustry</title>
-        <meta name="description" content="">
+        <meta name="keywords" content="Mindustry, mindustrygame, tower-defense, game">
+        <meta name="description" content="A sandbox tower-defense game.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
-        <link rel="shortcut icon" type="image/jpg" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
+        <meta charset="utf-8">
+        <link rel="icon" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
+        <link rel="stylesheet" async="" href="style.css">
     </head>
-    <body>
-        <img id="hdp" src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp">
-        <div>
-            <a href=""></a> <a href=""></a> <a href=""></a> <a href=""></a> 
-        </div>
-        <script src="" async defer></script>
-    </body>
+<body> 
+    <div class="tint"> 
+        <div id="modal" class="modal"> 
+            <span class="close" tabindex="0" onclick="document.getElementById('modal').style.display='none'">×</span> 
+            <img class="modal-content" id="modalimg"> 
+        </div> 
+        <div> 
+            <ul> 
+                <div> 
+                    <img src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp" alt="Mindustry Logo" class="header" style="margin:10px 4px 4px"><img> 
+                </div> 
+                <div class="project"> 
+                    <div> 
+                        <ul> 
+                            <br> 
+                            <a class="button icon" href="https://github.com/Anuken/Mindustry">
+                                <span style="background:url(icon-dev-builds.39dafc94.png)">Github</span>
+                            </a> 
+                            <a class="button icon" href="https://trello.com/b/aE2tcUwF/mindustry-trello">
+                                <span style="background:url(icon-trello.e493c412.png)">Trello</span>
+                            </a> 
+                            <a class="button icon" href="https://discord.gg/mindustry">
+                                <span style="background:url(icon-discord.55be14e6.png)">Discord</span>
+                            </a> 
+                            <a class="button icon" href="https://mindustrygame.github.io/wiki">
+                                <span style="background:url(icon-wiki.4f1607a5.png)">Wiki</span>
+                            </a> 
+                            <br> 
+                            <div style="height:40px"></div> 
+                            <a class="button icon" href="https://play.google.com/store/apps/details?id=io.anuke.mindustry">
+                                <span style="background:url(icon-google-play.3e77ad4e.png)">Google Play</span>
+                            </a> 
+                            <a class="button icon" href="https://f-droid.org/packages/io.anuke.mindustry/">
+                                <span style="background:url(icon-fdroid.0a144cb0.png)">F-Droid</span>
+                            </a> 
+                            <a class="button icon" href="https://apps.apple.com/us/app/mindustry/id1385258906?ign-mpt=uo%3D8">
+                                <span style="background:url(icon-link.249c5d33.png)">App Store</span>
+                            </a> 
+                            <a class="button icon" href="https://anuke.itch.io/mindustry">
+                                <span style="background:url(icon-itch.io.af0022d0.png)">itch.io</span>
+                            </a> 
+                            <div style="height:25px"></div> 
+                        </ul>
+                    </div> 
+                    <div class="center"> 
+                        <h2> 
+                            <b>Mindustry:</b> A sandbox tower-defense game. 
+                        </h2> 
+                    </div> 
+                    <main> 
+                        <div class="center"> 
+                            <ul class="boxes"> 
+                                <div class="box"> Defend your base from <span style="color:#f4ba6e">waves of powerful enemies</span>. 
+                                    <br> 
+                                    <img class="zoomer" alt="A high-level Mindustry base in combat with a wave of many low-level enemies." src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/1.d25af17a.webp" type="image/webp"> 
+                                </div> 
+                                <div class="box"> Build complex designs for <span style="color:#f4ba6e">processing materials</span>. 
+                                    <br> 
+                                    <img class="zoomer" alt="A peaceful Mindustry game with various end-game factories." src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/2.0d4f9a35.webp" type="image/webp"> 
+                                </div> 
+                                <div class="box"> Build and fight with other players on <span style="color:#f4ba6e">multiplayer servers</span>. 
+                                    <br> 
+                                    <img class="zoomer" alt="A peaceful Mindustry game with mid-tier factories while players wander and build." src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/3.88567664.webp" type="image/webp"> 
+                                </div> 
+                                
+                            </ul> 
+                        </div> 
+                    </main> 
+                </div>
+            </ul> 
+        </div> 
+    </div> 
+</body>
 </html>
