fix a tiny error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link rel="icon" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
-        <link rel="stylesheet" async="" href="https://mindustrygame.github.io/index.2dc66a5d.css">
+        <link rel="stylesheet" async="" href="style.css">
     </head>
 <body> 
     <div class="tint" align="center"> 
