--- a/index.html
+++ b/index.html
@@ -5,53 +5,50 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Mindustry</title>
-        <meta name="keywords" content="Mindustry, mindustrygame, tower-defense, game">
-        <meta name="description" content="A sandbox tower-defense game.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
         <link rel="icon" href="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon.b09ad385.png">
         <link rel="stylesheet" async="" href="style.css">
     </head>
 <body> 
-    <div class="tint" align="center"> 
+    <div class="tint"> 
         <div id="modal" class="modal"> 
             <span class="close" tabindex="0" onclick="document.getElementById('modal').style.display='none'">×</span> 
             <img class="modal-content" id="modalimg"> 
         </div> 
         <div> 
             <ul> 
-                <div align="center"> 
+                <div> 
                     <img src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp" alt="Mindustry Logo" class="header" style="margin:10px 4px 4px"><img> 
                 </div> 
-                <div align="center" class="project"> 
-                    <div align="center"> 
+                <div class="project"> 
+                    <div> 
                         <ul> 
                             <br> 
                             <a class="button icon" href="https://github.com/Anuken/Mindustry">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-dev-builds.39dafc94.png)">Github</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-dev-builds.39dafc94.png); background-repeat:no-repeat">Github</span>
                             </a> 
                             <a class="button icon" href="https://trello.com/b/aE2tcUwF/mindustry-trello">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-trello.e493c412.png)">Trello</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-trello.e493c412.png); background-repeat:no-repeat">Trello</span>
                             </a> 
                             <a class="button icon" href="https://discord.gg/mindustry">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-discord.55be14e6.png)">Discord</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-discord.55be14e6.png); background-repeat:no-repeat">Discord</span>
                             </a> 
                             <a class="button icon" href="https://mindustrygame.github.io/wiki">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-wiki.4f1607a5.png)">Wiki</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-wiki.4f1607a5.png); background-repeat:no-repeat">Wiki</span>
                             </a> 
                             <br> 
                             <div style="height:40px"></div> 
                             <a class="button icon" href="https://play.google.com/store/apps/details?id=io.anuke.mindustry">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-google-play.3e77ad4e.png)">Google Play</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-google-play.3e77ad4e.png); background-repeat:no-repeat">Google Play</span>
                             </a> 
                             <a class="button icon" href="https://f-droid.org/packages/io.anuke.mindustry/">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-fdroid.0a144cb0.png)">F-Droid</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-fdroid.0a144cb0.png); background-repeat:no-repeat">F-Droid</span>
                             </a> 
                             <a class="button icon" href="https://apps.apple.com/us/app/mindustry/id1385258906?ign-mpt=uo%3D8">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-link.249c5d33.png)">App Store</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-link.249c5d33.png); background-repeat:no-repeat">App Store</span>
                             </a> 
                             <a class="button icon" href="https://anuke.itch.io/mindustry">
-                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-itch.io.af0022d0.png)">itch.io</span>
+                                <span style="background:url(https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/icon-itch.io.af0022d0.png); background-repeat:no-repeat">itch.io</span>
                             </a> 
                             <div style="height:25px"></div> 
                         </ul>
@@ -62,7 +59,7 @@
                         </h2> 
                     </div> 
                     <main> 
-                        <div align="center" class="center"> 
+                        <div class="center"> 
                             <ul class="boxes"> 
                                 <div class="box"> Defend your base from <span style="color:#f4ba6e">waves of powerful enemies</span>. 
                                     <br> 
