--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div> 
             <ul> 
                 <div> 
-                    <img src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp" alt="Mindustry Logo" class="header" style="margin:10px 4px 4px"><img> 
+                    <img src="https://raw.githubusercontent.com/BoZhang-dev/CRPW-TSTI2D/refs/heads/main/image/header.1a067378.webp" alt="Mindustry Logo" class="header"><img> 
                 </div> 
                 <div class="project"> 
                     <div> 
